# Football_ETL

./: .gitignore  Makefile  README.md  docker-compose.yml
dagster/: requirements.txt
etl_pipeline/: README.md  pyproject.toml  requirements.txt
etl_pipeline/etl_pipeline/: __init__.py  definitions.py
etl_pipeline/etl_pipeline/assets/: bronze_layer.py  warehouse_layer.py
etl_pipeline/etl_pipeline/resources/: minio_io_manager.py  mysql_io_manager.py  psql_io_manager.py
load_data/: load_mysql_data.sql  mysql_foreign.sql  mysql_schema.sql  psql_schema.sql
streamlit/src/: main.py  psql_connect.py
